--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.breakout_game/com.example.game.HelloApplication</mainClass>
+                            <mainClass>com.example.breakout_game/com.example.javaPractice.HelloApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
